# sample-tagger

./: .gitignore  README.md  config.json  name_clusters.py  project.py  pyproject.toml  sample_tagger.py  samples.clap.paths  similar.py  simlib.py  test_cluster_names.py  webapp.py
docs/: boilerplate_reduction_plan.md  clap_eval_plan.md  classification_efficiency_plan.md  classification_plan.md  cleanup_plan.md  map_batch_select_plan.md  reaper_extension_plan.md  refactoring_plan.md  strip_down_plan.md  taxonomy.md  threshold_calibration_plan.md  webapp_workflow_plan.md  webui_usability_plan.md
docs/archive/: boilerplate_reduction_plan.md  classification_optimization_plan.md  classification_optimization_runbook.md  classification_plan.md  cleanup_plan.md  graphs_refactor_plan.md
reaper/: json.lua  sampletagger_search.lua
sampletagger/: analyze.py  audio.py  cli.py  config.py  constants.py  db.py  embeddings.py  migrate.py  panns.py  paths.py  projection.py  sim.py  stages.py  tags.py  workers.py
sampletagger/ml/: clap.py  cli.py  cluster.py  export.py  gold.py  pipeline.py  predict.py  report.py  train.py
sampletagger/web/: api.py  clusters.py  gold.py  labeling.py  mapview.py  routes.py  runs.py  server.py  sonic.py  state.py  stats.py
sampletagger/web/static/: app.css  clusters.html  clusters.js  index.html  index.js  map.html  map.js  review.html  review.js  settings.html  settings.js
scripts/: cluster_apply.py  cluster_dump.py  freeze_val.py  llm_auto_classify.py  llm_classification_manual.md  sample_gold.py  seed_taxonomy.py  set_val.py  sonic_label.py
